--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "pateint-app",
+  "name": "pizza-delivery-app",
   "version": "1.0.0",
   "description": "this is cgm patient app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "Fahime",
   "license": "ISC",
   "dependencies": {
@@ -13,5 +17,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.4",
     "mongoose-unique-validator": "^2.0.3"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
