heroku start app

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pizza-delivery-app",
   "version": "1.0.0",
-  "description": "this is cgm patient app",
+  "description": "this is pizza delivery app",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
